test/subjects/errors/constant_folding9.php
<?php
var_dump (~ false); // { Warning: Unsupported operand types }
?>
